[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scripts/ShipyardPanel.gd" type="Script" id=1]
[ext_resource path="res://Graphics/Ships/Fighter.png" type="Texture" id=2]
[ext_resource path="res://Scenes/CloseButton.tscn" type="PackedScene" id=3]
[ext_resource path="res://Resources/default_theme.tres" type="Theme" id=4]
[ext_resource path="res://Scenes/HelpText.tscn" type="PackedScene" id=5]

[node name="ShipyardPanel" type="Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -320.0
margin_top = -136.0
margin_right = 320.0
margin_bottom = 120.0
theme = ExtResource( 4 )
script = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -320.0
margin_right = 320.0
margin_bottom = 40.0
rect_min_size = Vector2( 0, 38 )
text = "CONSTRUCT_FIGHTERS"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Construct" type="Button" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -176.0
margin_top = -48.0
margin_right = -8.0
margin_bottom = -8.0
text = "CONSTRUCT"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollContainer" type="ScrollContainer" parent="."]
margin_left = 24.0
margin_top = 208.0
margin_right = 448.0
margin_bottom = 248.0
scroll_vertical_enabled = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBox" type="HBoxContainer" parent="ScrollContainer"]
margin_left = 10.0
margin_top = 5.0
margin_right = 414.0
margin_bottom = 35.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = -2

[node name="CloseButton" parent="." instance=ExtResource( 3 )]

[node name="TextureRect" type="TextureRect" parent="."]
margin_left = 24.0
margin_top = 72.0
margin_right = 232.0
margin_bottom = 176.0
texture = ExtResource( 2 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SpinBox" type="SpinBox" parent="."]
margin_left = 264.0
margin_top = 96.0
margin_right = 356.0
margin_bottom = 124.0
value = 1.0
rounded = true
allow_greater = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Strength" parent="." instance=ExtResource( 5 )]
margin_left = 384.0
margin_top = 96.0
margin_right = 632.0
margin_bottom = 126.0
help_text = "FLEET_STRENGTH_INFO"

[connection signal="pressed" from="Construct" to="." method="_on_Construct_pressed"]
[connection signal="close_button_pressed" from="CloseButton" to="." method="_on_close_button_pressed"]
[connection signal="value_changed" from="SpinBox" to="." method="_on_SpinBox_value_changed"]
